--- a/css/navbar.css
+++ b/css/navbar.css
@@ -67,6 +67,7 @@
         padding: 15px;
         text-align: center;
         z-index: 1;
+
     }
     .nav-links {
         display: none;
@@ -78,7 +79,7 @@
         top: 0;
         left: 0;
         z-index: 1;
-        margin-top: 10px; /* Add margin-top for consistent spacing */
+        margin-top: 10px; 
     }
 
     .nav-links li {
@@ -95,14 +96,14 @@
 
     .nav-links_mobile {
         display: flex;
-        justify-content: center; /* Center the icons horizontally */
+        justify-content: center; 
         align-items: center;
         list-style: none;
         margin: 0;
         padding: 0;
         background-color: rgba(0, 0, 0, 0.8);
         position: fixed;
-        bottom: 0; /* Fix the navbar at the bottom */
+        bottom: 0;
         left: 0;
         z-index: 1;
         width: 100%;
@@ -119,7 +120,7 @@
     }
 
     #nav-toggle {
-        display: none; /* Hide the checkbox by default */
+        display: none; 
     }
 
     #nav-toggle-label {
@@ -127,10 +128,10 @@
         color: white;
         margin-top: 10px;
         display: block;
-        position: fixed; /* Keep the toggle button fixed at the top */
+        position: fixed; 
         top: 10px;
         right: 10px;
-        font-size: 30px; /* Set the font size for the toggle button */
+        font-size: 30px; 
     }
 
     #nav-toggle:checked + .nav-links,
