--- a/css/projects.css
+++ b/css/projects.css
@@ -1,36 +1,68 @@
 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'IBM Plex Mono', monospace;
+    background-color: black;
+    color: white;
+}
 
-#conteudo_principal {
+.card-list {
+    
     display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    max-width: 1250px;
+    margin: 150px auto;
+    padding: 20px;
     gap: 20px;
-    max-width: 1200px;
-    margin: 20px auto;
 }
 
-.project {
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+.card-list .card-item {
+    background: #fff;
+    padding: 26px;
+    border-radius: 8px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
+    list-style: none;
+    cursor: pointer;
+    text-decoration: none;
+    border: 2px solid transparent;
+    transition: border 0.5s ease;
 }
 
-.carousel {
-    overflow: hidden;
+.card-list .card-item:hover {
+    border: 2px solid #000;
 }
 
-.slides {
-    display: flex;
+.card-list .card-item img {
+    width: 100%;
+    border-radius: 8px;
+    object-fit: cover;
 }
 
-.slide {
-    min-width: 100%;
-    transition: transform 0.5s ease-in-out;
+.card-list .editor {
+    background-color: #d6f8d6; 
+    color: #205c20;
 }
 
-input[name="slide"] {
-    display: none;
+.card-item h3 {
+    color: #000;
+    font-size: 1.438rem;
+    margin-top: 28px;
+    font-weight: 600;
 }
 
-#project1-slide1:checked ~ .slides { transform: translateX(0); }
-#project1-slide2:checked ~ .slides { transform: translateX(-100%); }
-#project1-slide3:checked ~ .slides { transform: translateX(-200%); }
 
+@media (max-width: 1200px) {
+    .card-list .card-item {
+        padding: 15px;
+    }
+    body{
+        margin-top: 50px;
+    }
+}
+
+@media screen and (max-width: 980px) {
+    .card-list {
+        margin: 0 auto;
+    }
+}
