--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -64,6 +64,25 @@ body {
     line-height: 1.6;
     margin-bottom: 15px;
 }
+.button-link {
+    display: inline-block;
+    background-color: #a4b3a8;
+    border: none;
+    border-radius: 24px;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 20px;
+    width: 150px;
+    padding: 18px 36px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.button-link:hover {
+    background-color: #66D9EF;
+}
 @media only screen and (max-width:1024px) {
     body {
         margin-top: 50px;
