--- a/css/styles.css
+++ b/css/styles.css
@@ -39,21 +39,21 @@ body {
 
 }
 
-#botao_contacto {
+
+
+.button-link {
+    display: inline-block;
+    padding: 10px 20px;
     background-color: #a4b3a8;
-    border: none;
-    border-radius: 24px;
     color: #ffffff;
-    cursor: pointer;
-    font-size: 20px;
-    padding: 18px 36px;
-    margin-top: 20px;
-    transition: background-color 0.3s ease-in-out;
+    text-decoration: none;
+    border-radius: 24px;
 }
 
-#botao_contacto:hover {
-    background-color: #66D9EF; 
+.button-link:hover {
+    background-color: #66D9EF;
 }
+
 
 @media only screen and (max-width: 1024px) {
     body {
